appId: "com.mycurio.curio"
---

# Wait for screen to load
- waitForAnimationToEnd
- assertVisible: "Login"

# Tap on Email field and enter text
- tapOn:
    point: 14%,51%
- inputText: "mabel@yopmail.com"

# Tap outside to dismiss keyboard
- tapOn:
    point: 12%,29%

# Tap on Password field and enter text
- tapOn:
    point: 17%,61%
- inputText: "Test@123"

- tapOn:
    point: 12%,29%


# Tap on Login button
- tapOn: "Login"

# Verify login success
- assertNotVisible: "Login"


# - tapOn:
#       id: "profile-nav-icon"

# - tapOn:
#       id: "profile-more"
# - tapOn: "Logout"
# - tapOn: "Logout"
# - waitForAnimationToEnd