appId: "com.mycurio.curio"
---
# - launchApp

# # Wait for screen to load
# - waitForAnimationToEnd

# Tap on Email field and enter text
- tapOn:
    point: 14%,51%
- inputText: "mabel@yopmail.com"

# Tap outside to dismiss keyboard
- tapOn:
    point: 12%,29%

# Tap on Password field and enter text
- tapOn:
    point: 12%,59%
- inputText: "invalid_password"

# Tap on Login button
- tapOn: "Login"



